# GraphormerLogP

./: .gitignore  LICENSE.md  README.md  pyproject.toml
Baselines/AttentiveFP/GLP_dataset/: Seeds_Predict_AttentiveFP_GLP_train_GLP_test.csv  Seeds_Predict_AttentiveFP_GLP_train_GLP_test.ipynb
Baselines/AttentiveFP/SGNN_dataset/: Seeds_Predict_AttentiveFP_SGNN_train_SGNN_test.csv  Seeds_Predict_AttentiveFP_SGNN_train_SGNN_test.ipynb
Baselines/D_MPNN/GLP_dataset/: Seeds_D_MMPN_PREDICT_GLP_train_GLP_test.csv  Seeds_D_MMPN_PREDICT_GLP_train_GLP_test.ipynb
Baselines/D_MPNN/SGNN_dataset/: Seeds_D_MMPN_PREDICT_SGNN_train_SGNN_test.csv  Seeds_D_MMPN_PREDICT_SGNN_train_SGNN_test.ipynb
Baselines/StructGNN/GLP_dataset/: Seeds_SGNN_PREDICT_GLP_train_GLP_test.csv  Seeds_SGNN_PREDICT_GLP_train_GLP_test_.ipynb  args.json
Baselines/StructGNN/SGNN_dataset/: Seeds_SGNN_PREDICT_SGNN_train_SGNN_test.csv  Seeds_SGNN_PREDICT_SGNN_train_SGNN_test.ipynb  args.json
GraphormerLogP/GLP_dataset/: Seeds_GLP_PREDICT_GLP_train_GLP_test.csv  Seeds_GLP_PREDICT_GLP_train_GLP_test_unsert.ipynb  __init__.py  dataset.py
GraphormerLogP/SGNN_dataset/: Seeds_GLP_PREDICT_SGNN_train_SGNN_test.csv  Seeds_GLP_PREDICT_SGNN_train_SGNN_test.ipynb  __main__.py  model_p.py
data/data_preprocessing/: checkers.py  preprocess_dataset.py  separate_data.py
data/final_data/: GLP_dataset_not_separate.csv
data/raw_data/: AstraZeneca_logP.csv  DB4.sdf  Huuskonen.sdf  NonStar.sdf  SAMPL6.sdf  SAMPL7.sdf  Star.sdf  prev_lod_logp.csv
data/separate_data/: SGNN_dataset.csv
(+8 files in other folders)
