[tool.poetry]
name = "glp-env"
version = "1.0"
description = "Environment for working with GLP"
authors = ["Grigorev_VA <grigorev4v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cgrtools = "4.0.41"
chython = "1.75"
chytorch = "1.62"
chytorch-rxnmap = "1.4"
click = "8.1.7"
joblib = "1.4.2"
loguru = "0.7.3"
lxml = "4.9.4"
markupsafe = "2.1.5"
matplotlib = "3.9.0"
networkx = "3.2.1"
numpy = "1.26.4"
openpyxl = "3.1.5"
pandas = "2.2.1"
pillow = "10.3.0"
pmapper = "1.1.3"
pytorch-lightning = "2.2.1"
rdkit = "2023.9.5"
scikit-learn = "1.3.0"
scipy = "1.12.0"
seaborn = "0.13.2"
sympy = "1.12"
torch = "2.0.0"
torchmetrics = "1.3.2"
torchtyping = "0.1.4"
tqdm = "4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
